--- a/部署流程说明.md
+++ b/部署流程说明.md
@@ -2,10 +2,10 @@
 
 ## 📋 项目信息
 
-- **GitHub用户名**: zj19930120
-- **仓库名称**: Heyiyao
-- **仓库地址**: https://github.com/zj19930120/Heyiyao
-- **网站地址**: https://zj19930120.github.io/Heyiyao/
+- **GitHub用户名**: MrZh2025
+- **仓库名称**: HeYiYao
+- **仓库地址**: https://github.com/MrZh2025/HeYiYao
+- **网站地址**: https://MrZh2025.github.io/HeYiYao/
 
 ---
 
@@ -72,7 +72,7 @@ git commit -m "调整页面样式和配色方案"
 - 可在 Actions 页面查看进度
 
 ### 查看部署状态
-访问：https://github.com/zj19930120/Heyiyao/actions
+访问：https://github.com/MrZh2025/HeYiYao/actions
 
 ---
 
@@ -80,10 +80,10 @@ git commit -m "调整页面样式和配色方案"
 
 部署成功后，可通过以下地址访问：
 
-- **首页**: https://zj19930120.github.io/Heyiyao/
-- **元素周期表**: https://zj19930120.github.io/Heyiyao/yuansuzhouqibiao.html
-- **放射性药物原理**: https://zj19930120.github.io/Heyiyao/放射性药物原理.html
-- **产业大屏**: https://zj19930120.github.io/Heyiyao/dashboard.html
+- **首页**: https://MrZh2025.github.io/HeYiYao/
+- **元素周期表**: https://MrZh2025.github.io/HeYiYao/yuansuzhouqibiao.html
+- **放射性药物原理**: https://MrZh2025.github.io/HeYiYao/放射性药物原理.html
+- **产业大屏**: https://MrZh2025.github.io/HeYiYao/dashboard.html
 
 ---
 
@@ -190,6 +190,6 @@ git push
 
 ---
 
-**最后更新**: 2025-01-14  
-**维护者**: zj19930120
+**最后更新**: 2025-01-14
+**维护者**: MrZh2025
 
