更新部署配置和文档：添加完整的GitHub Pages部署指南

--- a/部署流程说明.md
+++ b/部署流程说明.md
@@ -3,9 +3,9 @@
 ## 📋 项目信息
 
 - **GitHub用户名**: MrZh2025
-- **仓库名称**: HeYiYao
-- **仓库地址**: https://github.com/MrZh2025/HeYiYao
-- **网站地址**: https://MrZh2025.github.io/HeYiYao/
+- **仓库名称**: HeYiYao_Public
+- **仓库地址**: https://github.com/MrZh2025/HeYiYao_Public
+- **网站地址**: https://MrZh2025.github.io/HeYiYao_Public/
 
 ---
 
@@ -72,7 +72,7 @@ git commit -m "调整页面样式和配色方案"
 - 可在 Actions 页面查看进度
 
 ### 查看部署状态
-访问：https://github.com/MrZh2025/HeYiYao/actions
+访问：https://github.com/MrZh2025/HeYiYao_Public/actions
 
 ---
 
@@ -80,10 +80,10 @@ git commit -m "调整页面样式和配色方案"
 
 部署成功后，可通过以下地址访问：
 
-- **首页**: https://MrZh2025.github.io/HeYiYao/
-- **元素周期表**: https://MrZh2025.github.io/HeYiYao/yuansuzhouqibiao.html
-- **放射性药物原理**: https://MrZh2025.github.io/HeYiYao/放射性药物原理.html
-- **产业大屏**: https://MrZh2025.github.io/HeYiYao/dashboard.html
+- **首页**: https://MrZh2025.github.io/HeYiYao_Public/
+- **元素周期表**: https://MrZh2025.github.io/HeYiYao_Public/yuansuzhouqibiao.html
+- **放射性药物原理**: https://MrZh2025.github.io/HeYiYao_Public/放射性药物原理.html
+- **产业大屏**: https://MrZh2025.github.io/HeYiYao_Public/dashboard.html
 
 ---
 
