添加GitHub登录信息

--- a/部署流程说明.md
+++ b/部署流程说明.md
@@ -6,6 +6,7 @@
 - **仓库名称**: HeYiYao_Public
 - **仓库地址**: https://github.com/MrZh2025/HeYiYao_Public
 - **网站地址**: https://MrZh2025.github.io/HeYiYao_Public/
+- github登录名：1943752276@qq.com  密码：LZLJvip@1573
 
 ---
 
@@ -63,15 +64,18 @@ git commit -m "调整页面样式和配色方案"
 ## 🔄 自动部署说明
 
 ### 部署触发条件
+
 - 每次推送到 `main` 分支时自动触发
 - 使用 GitHub Actions 自动部署
 - 配置文件：`.github/workflows/deploy.yml`
 
 ### 部署时间
+
 - 通常需要 **2-5分钟**
 - 可在 Actions 页面查看进度
 
 ### 查看部署状态
+
 访问：https://github.com/MrZh2025/HeYiYao_Public/actions
 
 ---
@@ -90,6 +94,7 @@ git commit -m "调整页面样式和配色方案"
 ## 🛠️ 常用Git命令
 
 ### 查看状态
+
 ```bash
 # 查看当前修改状态
 git status
@@ -99,6 +104,7 @@ git log --oneline -10
 ```
 
 ### 撤销操作
+
 ```bash
 # 撤销工作区的修改（未add）
 git checkout -- 文件名
@@ -111,6 +117,7 @@ git reset --soft HEAD^
 ```
 
 ### 分支操作
+
 ```bash
 # 查看所有分支
 git branch -a
@@ -127,21 +134,22 @@ git checkout 分支名
 ## ⚠️ 注意事项
 
 1. **推送前检查**
+
    - 确保修改正确无误
    - 检查是否有敏感信息
    - 测试功能是否正常
-
 2. **提交信息规范**
+
    - 使用清晰的中文描述
    - 说明修改的主要内容
    - 便于后续查看历史记录
-
 3. **部署验证**
+
    - 推送后访问 Actions 页面查看部署状态
    - 部署成功后访问网站验证效果
    - 如有问题及时回滚
-
 4. **文件管理**
+
    - 不要提交临时文件
    - 不要提交敏感信息
    - 遵循 `.gitignore` 规则
@@ -159,6 +167,7 @@ git checkout 分支名
 ## 📞 问题排查
 
 ### 推送失败
+
 ```bash
 # 先拉取远程更新
 git pull origin main
@@ -168,11 +177,13 @@ git push
 ```
 
 ### 部署失败
+
 1. 访问 Actions 页面查看错误日志
 2. 检查 `.github/workflows/deploy.yml` 配置
 3. 确认 GitHub Pages 设置正确
 
 ### 网站未更新
+
 1. 等待5分钟后刷新页面
 2. 清除浏览器缓存（Ctrl + F5）
 3. 检查部署是否成功完成
@@ -182,6 +193,7 @@ git push
 ## 📅 更新日志
 
 ### 2025-01-14
+
 - ✅ 初始化Git仓库
 - ✅ 配置GitHub Actions自动部署
 - ✅ 成功推送所有文件到GitHub
@@ -192,4 +204,3 @@ git push
 
 **最后更新**: 2025-01-14
 **维护者**: MrZh2025
-
